--- a/assets/sass/base/_global.scss
+++ b/assets/sass/base/_global.scss
@@ -1,27 +1,3 @@
-.headline {
-  font-weight: $h1-weight;
-  @include fluid-font(20rem, $h1-min-size, 3rem, 20, 70, 1.574, 3);
-  font-family: $h1-font;
-  line-height: 1em;
-  display: inline-block;
-}
-
-.sub-headline {
-  @include fluid-font(20rem, $h2-min-size, 3rem, 20, 70, 1.574, 1.7);
-  font-weight: $h2-weight;
-  font-family: $h2-font;
-}
-
-.body-text {
-  @include fluid-font(20rem, $p-min-size, 3rem, 20, 70, 1.574, 1.7);
-  font-family: $p-font;
-  max-width: 40ch;
-  margin: 0 auto;
-}
-
-.emphasized {
-  font-weight: $emphasized;
-}
 
 .break::before {
   content: "\A";
@@ -35,15 +11,6 @@
 
 }
 
-//.bread-wrapper{
-//  overflow: visible;
-//  margin: 40px 0;
-
-  //for enter animation the default position needs to be out of view
-//}
-
-
-
 body {
   overscroll-behavior: none;
   position: fixed;
@@ -54,6 +21,7 @@ body {
 
 p,
 h1,
+a,
 h2,
 div,
 h3 {
@@ -61,15 +29,37 @@ h3 {
   letter-spacing: $letter-spacing;
 }
 
-
-@media (max-width: 600px) {
-  #header-wrapper {
-    padding: 3vh 0 8vh 0;
-  }
-}
+//
+//@media (max-width: 600px) {
+//  #header-wrapper {
+//    padding: 3vh 0 8vh 0;
+//  }
+//}
 
 // ---------------------- Component styles ---------------------------
 
-.sub-cmp-wrapper {
-  text-align: center;
+.headline {
+  font-weight: $h1-weight;
+  @include fluid-font(20rem, $h1-min-size, 3rem, 20, 70, 1.574, 3);
+  font-family: $h1-font;
+  line-height: 1em;
+  display: inline-block;
+}
+
+.sub-headline {
+  @include fluid-font(20rem, $h2-min-size, 3rem, 20, 70, 1.574, 1.7);
+  font-weight: $h2-weight;
+  font-family: $h2-font;
+  margin: 3.5em 0 2.5em 0;
+}
+
+.body-text {
+  @include fluid-font(20rem, $p-min-size, 3rem, 20, 70, 1.574, 1.7);
+  font-family: $p-font;
+  max-width: 40ch;
+  margin: 0 auto;
+}
+
+.emphasized {
+  font-weight: $emphasized;
 }
