--- a/assets/sass/helpers/_variables.scss
+++ b/assets/sass/helpers/_variables.scss
@@ -1,19 +1,4 @@
-/*--------------- MIXINS ------------------*/
-@mixin fluid-font(
-  $min-screen-px,
-  $min-font-px,
-  $max-font-px,
-  $min-screen,
-  $max-screen,
-  $min-font,
-  $max-font
-) {
-  font-size: calc(
-    #{$min-font-px} + (#{$max-font} - #{$min-font}) * (
-    100vw - #{$min-screen-px}
-    ) / (#{$max-screen} - #{$min-screen})
-  );
-}
+
 /* --------------- COLORS ------------------ */
 $fav-color: #ff0000;
 $default-txt-color: white;
